--- a/First3DGame/First3DGame.vcxproj.filters
+++ b/First3DGame/First3DGame.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="SoundEvent.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="AudioComponent.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -140,7 +143,10 @@
     <ClInclude Include="AudioSystem.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="SoundEvent.hpp">
+    <ClInclude Include="SoundEvent.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="AudioComponent.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
